// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expert Button 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "marginTop": "-20%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 35,
            }
          }
        >
          Call Expert?
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#f93831",
                "borderBottomWidth": null,
                "borderColor": "#007aff",
                "borderLeftWidth": null,
                "borderRadius": 57,
                "borderRightWidth": null,
                "borderTopWidth": null,
                "elevation": 2,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "margin": "5%",
                "opacity": 1,
                "paddingBottom": 6,
                "paddingTop": 6,
                "width": 100,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "marginLeft": "15%",
                }
              }
            >
               Cancel 
            </Text>
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#007aff",
                "borderBottomWidth": null,
                "borderColor": "#007aff",
                "borderLeftWidth": null,
                "borderRadius": 57,
                "borderRightWidth": null,
                "borderTopWidth": null,
                "elevation": 2,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "margin": "5%",
                "opacity": 1,
                "paddingBottom": 6,
                "paddingTop": 6,
                "width": 100,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "marginLeft": "25%",
                }
              }
            >
               Call 
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#007aff",
        "borderBottomWidth": null,
        "borderColor": "#007aff",
        "borderLeftWidth": null,
        "borderRadius": 57,
        "borderRightWidth": null,
        "borderTopWidth": null,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "space-between",
        "marginLeft": 2,
        "opacity": 1,
        "paddingBottom": 6,
        "paddingTop": 6,
        "width": 140,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 20,
          "marginLeft": "10%",
        }
      }
    >
       Call Expert 
    </Text>
  </View>
</View>
`;

exports[`Home 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 1334,
    }
  }
  virtual={undefined}
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#cecece",
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "borderRightColor": "#7c7f99",
          "borderRightWidth": 1,
          "height": "100%",
          "width": "35%",
        }
      }
    >
      <RCTScrollView
        dataSource={
          ListViewDataSource {
            "items": 14,
          }
        }
        renderRow={[Function]}
        renderScrollComponent={[Function]}
        style={
          Object {
            "paddingLeft": 40,
          }
        }
      >
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            1
            ) 
            Change Oil
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            2
            ) 
            Change starter
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            3
            ) 
            Rotate Tire
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            4
            ) 
            Check Timing Belt
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            5
            ) 
            Check Fluid levels
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            6
            ) 
            Check lights
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            7
            ) 
            Check Brake lines
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            8
            ) 
            Check Brake pads
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            9
            ) 
            Rotate Tire
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            10
            ) 
            Check Timing Belt
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            11
            ) 
            Check Fluid levels
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            12
            ) 
            Check lights
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            13
            ) 
            Check Brake lines
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "black",
                "fontSize": 25,
                "paddingTop": 10,
                "textShadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
              }
            }
          >
            14
            ) 
            Check Brake pads
          </Text>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#c8c8c8",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "width": "60%",
        }
      }
    >
      <View
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#2b70ec",
              "fontFamily": "Roboto",
              "fontSize": 44,
              "textAlign": "center",
              "textShadowOffset": Object {
                "height": 2,
                "width": 2,
              },
            }
          }
        >
          Welcome to AR Maintenance
        </Text>
      </View>
      <View
        style={
          Object {
            "height": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Job List 1`] = `
<View
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRightColor": "#7c7f99",
      "borderRightWidth": 1,
      "height": "100%",
      "width": "35%",
    }
  }
>
  <RCTScrollView
    dataSource={
      ListViewDataSource {
        "items": 14,
      }
    }
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    style={
      Object {
        "paddingLeft": 40,
      }
    }
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        1
        ) 
        Change Oil
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        2
        ) 
        Change starter
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        3
        ) 
        Rotate Tire
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        4
        ) 
        Check Timing Belt
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        5
        ) 
        Check Fluid levels
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        6
        ) 
        Check lights
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        7
        ) 
        Check Brake lines
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        8
        ) 
        Check Brake pads
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        9
        ) 
        Rotate Tire
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        10
        ) 
        Check Timing Belt
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        11
        ) 
        Check Fluid levels
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        12
        ) 
        Check lights
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        13
        ) 
        Check Brake lines
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontSize": 25,
            "paddingTop": 10,
            "textShadowOffset": Object {
              "height": 1,
              "width": 1,
            },
          }
        }
      >
        14
        ) 
        Check Brake pads
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`start Button 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#007aff",
        "borderBottomWidth": null,
        "borderColor": "#007aff",
        "borderLeftWidth": null,
        "borderRadius": 57,
        "borderRightWidth": null,
        "borderTopWidth": null,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "space-between",
        "marginLeft": "30%",
        "opacity": 1,
        "paddingBottom": 6,
        "paddingTop": 6,
        "width": 140,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 20,
          "marginLeft": "25%",
        }
      }
    >
       Start 
    </Text>
  </View>
</View>
`;
